@@ -27,6 +27,7 @@
 
 #define PDF_COLORSPACE_TYPE_DEVICECMYK -4
 #define PDF_COLORSPACE_TYPE_DEVICERGB  -3
+#define PDF_COLORSPACE_TYPE_SPOT       -2
 #define PDF_COLORSPACE_TYPE_DEVICEGRAY -1
 #define PDF_COLORSPACE_TYPE_INVALID     0
 #define PDF_COLORSPACE_TYPE_CALGRAY     1
@@ -44,6 +45,7 @@
 typedef struct
 {
   int    num_components;
+  char*  spot_color_name;
   double values[PDF_COLOR_COMPONENT_MAX];
 } pdf_color;
 
@@ -54,6 +56,9 @@ extern int        pdf_color_rgbcolor      (pdf_color *color,
 extern int        pdf_color_cmykcolor     (pdf_color *color,
                                            double c, double m, double y, double k);
 extern int        pdf_color_graycolor     (pdf_color *color, double g);
+
+extern int        pdf_color_spotcolor     (pdf_color *color, char* color_name, double c);
+
 extern void       pdf_color_copycolor     (pdf_color *color1, const pdf_color *color2);
 
 #define pdf_color_black(c)   pdf_color_graycolor(c, 0.0);
@@ -63,7 +68,7 @@ extern void       pdf_color_brighten_color (pdf_color *dst, const pdf_color *src
 
 extern int        pdf_color_type          (const pdf_color *color);
 extern int        pdf_color_compare       (const pdf_color *color1, const pdf_color *color2);
-extern int        pdf_color_to_string     (const pdf_color *color, char *buffer);
+extern int        pdf_color_to_string     (const pdf_color *color, char *buffer, char mask);
 
 extern int        pdf_color_is_white      (const pdf_color *color);
 extern int        pdf_color_is_valid      (const pdf_color *color);
